deployment/sit-website/middleware.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: Middleware
metadata:
  annotations:
  name: fe-landing-website-middleware
  namespace: sit-website
spec:
  stripPrefix:
    prefixes:
      - /
