deployment/sit-website/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    axis: fe-landing-website
  name: fe-landing-website
  namespace: sit-website
spec:
  progressDeadlineSeconds: 600
  replicas: 1
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      axis: fe-landing-website
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        prometheus.io/path: /metrics
        prometheus.io/port: "4000"
        prometheus.io/scrape: "true"
      labels:
        axis: fe-landing-website
    spec:
      containers:
        - image: git.axisapp.io:5050/axis/fe-landing-website:latest
          imagePullPolicy: Always
          name: fe-landing-website
          ports:
            - containerPort: 4000
              protocol: TCP
          resources: {}
          terminationMessagePath: /sit/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      hostAliases:
        - hostnames:
            - cmssit.axispay.app
          ip: 10.10.230.2
      imagePullSecrets:
        - name: gitlab-secrets
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
