deployment/sit-website/ingress-route.yaml
apiVersion: traefik.containo.us/v1alpha1
kind: IngressRoute
metadata:
  name: fe-landing-website
  namespace: sit-website
spec:
  entryPoints:
    - websecure
  routes:
    - kind: Rule
      match: Host(`axissit.axispay.app`) && PathPrefix(`/`)
      middlewares:
        - name: fe-landing-website-middleware
      services:
        - name: fe-landing-website
          port: 4000
  tls:
    secretName: axispay.app-tls
